<resources>
    <string name="app_name">Drivit</string>
    <string name="textPresentation">Bienvenidos a Drivit, Ahora puedes practicar el ensayo teórico de conducción. Ten en cuenta que al utilizar la aplicación estás aceptando los términos y condiciones.</string>
    <string name="labelPresentationClassB">Clase B</string>
    <string name="labelPresentationClassC">Clase C</string>
    <string name="labelConditions">Términos y condiciones</string>
    <string name="labelGratitude">Agradecimientos</string>
    <string name="labelQuestion">Examen</string>
    <string name="labelNavQuestion">Navegación</string>
    <string name="btnCondition">TÉRMINOS Y CONDICIONES</string>
    <string name="btnGratitude">AGRADECIMIENTOS</string>
    <string name="btnReady">ESTOY PREPARADO</string>
    <string name="btnReview">REVISAR</string>
    <string name="btnReDoTest">HACER OTRO EXAMEN</string>
    <string name="msjeTitle1">Error con la descarga del examen</string>
    <string name="msjeText1">No se ha podido descargar el examen, verifique su conexión a internet</string>
    <string name="msjeText2">Descargando las preguntas de la Web</string>
    <string name="msjeText3">Eliminando set de preguntas anteriores</string>
    <string name="msjeText4">Guardando set de preguntas en dispositivo</string>
    <string name="msjeText5">Se ha eliminado el set de preguntas del dispositivo</string>
    <string name="msjeText6">Ensayos offline disponibles</string>
    <string name="msjeTitle7">Error de almacenamiento</string>
    <string name="msjeText7">No se ha podido guardar el set de preguntas en el dispositivo</string>
    <string name="msjeText8">Generando ensayo</string>
    <string name="msjeTitle9">Atención</string>
    <string name="msjeText9">Tranquilo, nadie es tan rápido para terminarlo en ese tiempo, ingresa un tiempo mayor a 0</string>
    <string name="msjeTitle10">Acceso a internet requerido</string>
    <string name="msjeText10">No es posible practicar sin acceso a internet. Puede descargar un set de preguntas para su funcionamiento offline desde la sección configuraciones</string>
    <string name="msjeTitle11">Ha ocurrido un error</string>
    <string name="msjeText11">No se ha podido registrar la puntuación del ensayo</string>
    <string name="msjeTitle12">Ha ocurrido un error</string>
    <string name="msjeText12">No se han podido cargar el registro de dato</string>
    <string name="msjeText13">Cargando registros de ensayos realizados</string>
    <string name="msjeText14">Guardando los resultados obtenidos</string>
    <string name="msjeTitle15">Ha ocurrido un error</string>
    <string name="msjeText15">No se han podido guardar sus resultados</string>
    <string name="mod1b">¿Estás preparado para comenzar un examen en modalidad real de clase B?</string>
    <string name="mod1c">¿Estás preparado para comenzar un examen en modalidad real de clase C?</string>
    <string name="mod2bc">Tienes 45 minutos para responder las 35 preguntas</string>
    <string name="cate1">Leyes y reglas del tránsito</string>
    <string name="cate2">Conducta vial</string>
    <string name="cate3">Mecánica básica</string>
    <string name="cate4">Seguridad vial</string>
    <string name="specialText1">¿Estás preparado para refozar la materia leyes y reglas del tránsito?</string>
    <string name="specialText2">¿Estás preparado para refozar la materia conducta vial?</string>
    <string name="specialText3">¿Estás preparado para refozar la materia Mecánica básica?</string>
    <string name="specialText4">¿Estás preparado para refozar la materia Seguridad vial?</string>
    <string name="specialText5">Tienes 15 minutos para responder las 10 preguntas del examen</string>
    <string name="modTA1">¿Cuántos minutos tienes para practicar?</string>
    <string name="modTA2">Ingresa el tiempo que quieres practicar, se cargarán 35 preguntas al examen</string>
    <string name="modS1">¿Quieres practicar en modalidad muerte súbita?</string>
    <string name="modS2">Debes responder las preguntas sin fallar hasta terminar el ensayo</string>
    <string name="resultCat1">Muy Bien, sigue así</string>
    <string name="resultCat2">Vuelve a intentarlo</string>
    <string name="resultCat3">Ups, no obtuvistes un buen puntaje, repasa los contenidos del manual del conductor y vuelve a intentarlo</string>
    <string name="resultCat4">Felicidades Obtuvistes un buen puntaje, sigue practicando</string>
    <string name="result1">Superado</string>
    <string name="result2">No superado</string>
    <string name="result3">Puntaje:</string>
    <string name="result4">Porcentaje:</string>
    <string name="result5">Correctas:</string>
    <string name="result6">Incorrectas:</string>
    <string name="result7">Omitidas:</string>
    <string name="result8">T. Utilizado:</string>
    <string name="result9">T. Restante:</string>
    <string name="result10">Lo siento, con esa puntuación no aprobarías el examen teórico de conducción. Sigue practicando para alcanzar tu meta</string>
    <string name="result11">Felicidades con esa puntuación aprobarías el examen teórico de conducción. Sigue así.</string>
    <string name="result12">minutos</string>
    <string name="result13">ptos.</string>
    <string name="result14">T. total:</string>
    <string name="result15">Faltaron:</string>
    <string name="confTitle">Ensayos offline:</string>
    <string name="confText1">Descarga un set de preguntas para poder practicar cuando no tengas acceso a internet</string>
    <string name="confText2">SÍ</string>
    <string name="text7">Ilustre Municipalidad de Cerrillos</string>
    <string name="text8">Por su participación y colaboración con el desarrollo de este proyecto.</string>
    <string name="text9">Universidad de Santiago de Chile</string>
    <string name="text10">Por la posibilidad de desarrollar este proyecto de título.</string>
    <string name="text11">Blackbird SpA</string>
    <string name="text12">Por la infraestructura entregada que hace posible que el proyecto se encuentre activo para el público.</string>
    <string name="termT1">Uso:</string>
    <string name="termT2">Actualizaciones de la aplicación:</string>
    <string name="termT3">Responsabilidades:</string>
    <string name="termT4">Exoneración:</string>
    <string name="termT5">Divisibilidad y supervivencia:</string>
    <string name="termT6">Política de privacidad:</string>
    <string name="termT7">Información que recopilamos y cómo la usamos:</string>
    <string name="termT8">Divulgación de su información a terceros:</string>
    <string name="termT9">Prácticas sobre seguridad de la información:</string>
    <string name="termT10">Enmiendas a esta política de privacidad:</string>
    <string name="termT11">Descargo de responsabilidad:</string>
    <string name="deta1">Drivit se reserva el derecho de enmendar, complementar  o suspender total o parcialmente la aplicación móvil en forma ocasional. Asimismo, Drivit se reserva el derecho de cambiar los términos y condiciones en cualquier momento, con vigencia inmediata a partir del momento que se actualiza la aplicación. Al utilizar la aplicación se consideran aceptado los términos y condiciones por lo que es responsabilidad del usuario mantenerse informado de estos.
Drivit se reserva el derecho de eliminar o prohibir a cualquier usuario la utilización de esta aplicación en cualquier momento.</string>
    <string name="deta2">Drivit puede solicitar a los usuarios que actualicen su versión de la aplicación móvil en cualquier momento. Aunque se harán todos los esfuerzos por conservar las configuraciones y preferencias personales de los usuarios, seguirá existiendo la posibilidad de que exista pérdida de información.</string>
    <string name="deta3">Drivit se compromete a realizar su mayor esfuerzo para mantener actualizada la información de sus ensayos en relación con el examen teórico de conducción vigente.
Drivit no se hace responsable por errores presentes tanto en los ensayos como en la corrección de estos, sin embargo se compromete a realizar su mayor esfuerzo para realizar las correcciones pertinentes en cuanto se haya percatado de esto.
Drivit no se hace responsable por los resultados de evaluaciones o eventos ajenos a los que se realizan en esta aplicación.</string>
    <string name="deta4">Los usuarios liberarán de toda responsabilidad y exonera a Drivit de todo reclamo, demanda, responsabilidad civil, causa legal, querella o daños y perjuicios la información, contenido o entrega incorrecta de la aplicación.</string>
    <string name="deta5">Si cualquier cláusula de estos Términos y Condiciones resultara inválida, nula o inaplicable, las cláusulas restantes conservarán de todos modos su total validez y la cláusula inválida, nula o inaplicable será considerada como modificada de modo tal que sea válida y aplicable hasta el máximo alcance permitido por la ley.</string>
    <string name="deta6">Drivit se compromete a mantener informada a las personas sobre la forma en que se utiliza la información enviada desde la aplicación. Al utilizar la aplicación el usuario autoriza a que recopilemos y utilicemos la información según lo establecido en la presente política. Si no está de acuerdo con esta política, no se deberá utilizar esta aplicación.</string>
    <string name="deta7">La “la información personal” se refiere a aquella información que nos permite conocer los detalles específicos de quién es usted y puede utilizarse para identificarlo o ponerse en contacto. Entre los ejemplos de la información personal que usted puede enviar se incluyen su nombre, su correo electrónico y su comuna de residencia. Drivit utiliza esta información personal para fines estadísticos y mejorar su experiencia con la aplicación.
La información no personal se refiere a la información que no identifica a un individuo en particular por sí solo o en combinación con otra información no personal. Nuestro propósito principal al recopilar esta información es para fines estadísticos y mejorar su experiencia con la aplicación.</string>
    <string name="deta8">Drivit no divulgará, sin su consentimiento, ninguna información personal a terceros. En relación al cumplimiento de leyes y seguridad pública, Drivit puede divulgar información personal si considera, de buena fe, que tal divulgación es necesaria para cumplir con las leyes pertinentes, o para responder a citaciones u órdenes judiciales de las que haya sido notificado, o para proteger o defender los derechos, la propiedad y la seguridad de los usuarios, de terceros o de nosotros mismos. Las autoridades judiciales o las agencias del orden público pueden exigir que Drivit proporcione información personal a las autoridades gubernamentales que correspondan. En caso de una fusión, consolidación, reorganización o venta o transferencia de todos o sustancialmente todos los activos o actividades comerciales de Drivit, uno de los activos que normalmente se transferirá es la información que recopilamos de nuestros usuarios. Sin embargo, el uso de esta información por parte de cualquier entidad sucesora seguirá estando sujeto a los términos de esta política, con sus eventuales enmiendas.</string>
    <string name="deta9">Drivit se compromete a realizar esfuerzos razonables para prevenir que terceros adquieran, alteren, o destruyan información puesta a disposición de Drivit a través de la aplicación. No obstante la intercepción o adquisición ilícita por parte de un tercero sigue siendo posible.</string>
    <string name="deta10">Drivit se reserva el derecho, en cualquier momento y sin aviso previo, de agregar, cambiar, modificar o actualizar esta política de privacidad mediante la publicación de una nueva política enmendada en esta aplicación.</string>
    <string name="deta11">Drivit no se hace responsable de ninguna actividad ilícita en caso de que un tercero obtenga una contraseña o acceda ilegalmente a la información enviada por la aplicación.</string>
</resources>