<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cl.blackbirdhq.drivit.Conditions"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/termT1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/GreenText"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PeaGreenText"
            android:textSize="13sp"
            android:text="@string/deta1"/>
        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/termT2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/GreenText"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PeaGreenText"
            android:textSize="13sp"
            android:text="@string/deta2"/>
        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/termT3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/GreenText"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PeaGreenText"
            android:textSize="13sp"
            android:text="@string/deta3"/>
        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/termT4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/GreenText"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PeaGreenText"
            android:textSize="13sp"
            android:text="@string/deta4"/>
        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/termT5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/GreenText"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PeaGreenText"
            android:textSize="13sp"
            android:text="@string/deta5"/>
        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/termT6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/GreenText"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PeaGreenText"
            android:textSize="13sp"
            android:text="@string/deta6"/>
        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/termT7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/GreenText"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PeaGreenText"
            android:textSize="13sp"
            android:text="@string/deta7"/>
        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/termT8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/GreenText"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PeaGreenText"
            android:textSize="13sp"
            android:text="@string/deta8"/>
        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/termT9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/GreenText"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PeaGreenText"
            android:textSize="13sp"
            android:text="@string/deta9"/>
        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/termT10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/GreenText"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PeaGreenText"
            android:textSize="13sp"
            android:text="@string/deta10"/>
        <TextView
            android:layout_marginTop="15dp"
            android:text="@string/termT11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/GreenText"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PeaGreenText"
            android:textSize="13sp"
            android:text="@string/deta11"/>


    </LinearLayout>
</ScrollView>