<ScrollView
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:layout_gravity="center_vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="cl.blackbirdhq.drivit.RealModality">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp" >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img_car"
        android:layout_marginBottom="25dp"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod1b"
        android:textColor="@color/GreenText"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="25dp"
        android:id="@+id/questionText"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod2bc"
        android:textColor="@color/PeaGreenText"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginBottom="25dp"/>
    <Button
        style="@style/buttonStyle"
        android:id="@+id/btnReady"
        android:text="@string/btnReady"
        android:onClick="goTest"/>
</LinearLayout>
</ScrollView>
